# termgpt

./: Cargo.toml
src/: main.rs
