[package]
name = "termgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = "0.19.0"
reqwest = { version = "0.11.17", features = ["json", "stream"] }
termimad = "0.20"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.0"
